correcting path to URL